--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,26 +5,31 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".root.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".login.mvp.view.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PrincipalActivity" />
+        <activity android:name=".garbage.PrincipalActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".crud.read.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme" />
-        <activity android:name=".ReagenteActivity" />
-        <activity android:name=".VidrariaActivity"></activity>
+        <activity
+            android:name=".crud.read.ReagenteActivity" />
+        <activity
+            android:name=".crud.read.VidrariaActivity" />
+        <activity android:name=".crud.create.CreateReagenteActivity" />
+        <activity android:name=".crud.create.CreateVidrariaActivity"/>
     </application>
 
 </manifest>
